Layout fix for recurring baskets, output should be more readable now
fixes 107
fixes 127

--- a/trunk/themes/default/goah.css
+++ b/trunk/themes/default/goah.css
@@ -292,7 +292,7 @@ td.right {
 	text-align: right;
 }
 
-thead th {
+thead th, tbody td.heading {
     background: transparent url('gfx/bg-table-header.png') repeat-x 0 0;
     color: #fff;
     line-height: 24px;
